3. Deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birthday-app
  labels:
    app: birthday
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: birthday
  template:
    metadata:
      labels:
        app: birthday
    spec:
      containers:
      - name: birthday-app
        image: $IMAGE
        ports:
        - containerPort: 5005
