3. Deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: birthday-app-service
spec:
  selector:
    app: birthday
  ports:
    - name: birthday-port
      protocol: TCP
      port: 5005
      targetPort: 5005
