3. Deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: birthday-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: xxx
    http:
      paths:
      - backend:
          service:
            name: birthday-app-service
            port:
              number: 5005
        path: /
        pathType: ImplementationSpecific
